--- a/src/main/resources/org/openjfx/scene.fxml
+++ b/src/main/resources/org/openjfx/scene.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -62,29 +63,26 @@
                   </TableColumn>
               </columns>
             </TableView>
-            <Label layoutX="14.0" prefHeight="75.0" prefWidth="298.0" text="Personregister">
+            <Label layoutX="37.0" layoutY="13.0" prefHeight="75.0" prefWidth="298.0" text="Personregister">
                <font>
                   <Font size="41.0" />
                </font>
             </Label>
-            <TextField fx:id="txtName" layoutX="413.0" layoutY="38.0" />
-            <TextField fx:id="txtEmail" layoutX="413.0" layoutY="75.0" />
-            <TextField fx:id="txtPhoneNr" layoutX="413.0" layoutY="111.0" />
-            <TextField fx:id="txtDay" layoutX="413.0" layoutY="157.0" prefHeight="26.0" prefWidth="38.0" />
-            <TextField fx:id="txtMonth" layoutX="457.0" layoutY="157.0" prefHeight="26.0" prefWidth="38.0" />
-            <TextField fx:id="txtYear" layoutX="501.0" layoutY="157.0" prefHeight="26.0" prefWidth="60.0" />
-            <Label alignment="CENTER_RIGHT" layoutX="315.0" layoutY="42.0" prefHeight="18.0" prefWidth="90.0" text="Name:" />
-            <Label alignment="CENTER_RIGHT" layoutX="315.0" layoutY="78.0" prefHeight="18.0" prefWidth="90.0" text="Email:" />
-            <Label alignment="CENTER_RIGHT" layoutX="315.0" layoutY="114.0" prefHeight="18.0" prefWidth="90.0" text="Phone number:" />
-            <Label alignment="CENTER" layoutX="413.0" layoutY="139.0" prefHeight="18.0" prefWidth="38.0" text="Day:" />
-            <Label alignment="CENTER" layoutX="457.0" layoutY="139.0" prefHeight="18.0" prefWidth="38.0" text="Month:" />
-            <Label alignment="CENTER" layoutX="512.0" layoutY="139.0" prefHeight="18.0" prefWidth="38.0" text="Year:" />
-            <Label fx:id="lblErrName" layoutX="569.0" layoutY="43.0" prefHeight="18.0" prefWidth="313.0" textFill="RED" />
-            <Label fx:id="lblErrEmail" layoutX="569.0" layoutY="78.0" prefHeight="18.0" prefWidth="313.0" textFill="RED" />
-            <Label fx:id="lblErrPhoneNr" layoutX="569.0" layoutY="114.0" prefHeight="18.0" prefWidth="313.0" textFill="RED" />
-            <Label fx:id="lblErrDate" layoutX="569.0" layoutY="161.0" prefHeight="18.0" prefWidth="313.0" textFill="RED" />
-            <Label alignment="CENTER_RIGHT" layoutX="315.0" layoutY="161.0" prefHeight="18.0" prefWidth="90.0" text="Birthdate:" />
-            <Button layoutX="80.0" layoutY="119.0" mnemonicParsing="false" onAction="#btnRegister" prefHeight="36.0" prefWidth="130.0" text="Register" />
+            <TextField fx:id="txtName" layoutX="394.0" layoutY="61.0" promptText="Name" />
+            <TextField fx:id="txtEmail" layoutX="561.0" layoutY="61.0" promptText="Email" />
+            <TextField fx:id="txtPhoneNr" layoutX="561.0" layoutY="101.0" promptText="Phone" />
+            <TextField fx:id="txtDay" layoutX="394.0" layoutY="100.0" prefHeight="26.0" prefWidth="38.0" promptText="DD" />
+            <TextField fx:id="txtMonth" layoutX="439.0" layoutY="100.0" prefHeight="26.0" prefWidth="38.0" promptText="MM" />
+            <TextField fx:id="txtYear" layoutX="483.0" layoutY="100.0" prefHeight="26.0" prefWidth="60.0" promptText="YYYY" />
+            <Label fx:id="lblErrName" layoutX="394.0" layoutY="42.0" prefHeight="18.0" prefWidth="166.0" textFill="RED" />
+            <Label fx:id="lblErrEmail" layoutX="561.0" layoutY="42.0" prefHeight="18.0" prefWidth="166.0" textFill="RED" />
+            <Label fx:id="lblErrPhoneNr" layoutX="561.0" layoutY="126.0" prefHeight="18.0" prefWidth="166.0" textFill="RED" />
+            <Label fx:id="lblErrDate" layoutX="394.0" layoutY="126.0" prefHeight="18.0" prefWidth="166.0" textFill="RED" />
+            <Button layoutX="727.0" layoutY="77.0" mnemonicParsing="false" onAction="#btnRegister" prefHeight="36.0" prefWidth="130.0" text="Register" />
+            <ChoiceBox fx:id="chkbxSearch" layoutX="577.0" layoutY="157.0" prefHeight="26.0" prefWidth="158.0" />
+            <TextField fx:id="txtSearch" layoutX="266.0" layoutY="158.0" prefHeight="26.0" prefWidth="298.0" />
+            <Button layoutX="156.0" layoutY="158.0" mnemonicParsing="false" onAction="#btnSearch" prefHeight="26.0" prefWidth="97.0" text="Search" />
+            <Label fx:id="lblErrChcbx" layoutX="738.0" layoutY="162.0" prefHeight="18.0" prefWidth="140.0" textFill="RED" />
          </children>
       </AnchorPane>
    </children>
