--- a/src/main/resources/org/openjfx/scene.fxml
+++ b/src/main/resources/org/openjfx/scene.fxml
@@ -4,6 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -63,7 +66,7 @@
                   </TableColumn>
               </columns>
             </TableView>
-            <Label layoutX="37.0" layoutY="13.0" prefHeight="75.0" prefWidth="298.0" text="Personregister">
+            <Label layoutX="31.0" layoutY="36.0" prefHeight="75.0" prefWidth="298.0" text="Personregister">
                <font>
                   <Font size="41.0" />
                </font>
@@ -83,6 +86,16 @@
             <TextField fx:id="txtSearch" layoutX="266.0" layoutY="158.0" prefHeight="26.0" prefWidth="298.0" />
             <Button layoutX="156.0" layoutY="158.0" mnemonicParsing="false" onAction="#btnSearch" prefHeight="26.0" prefWidth="97.0" text="Search" />
             <Label fx:id="lblErrChcbx" layoutX="738.0" layoutY="162.0" prefHeight="18.0" prefWidth="140.0" textFill="RED" />
+            <MenuBar prefHeight="26.0" prefWidth="896.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" onAction="#btnOpenFile" text="Open file" />
+                        <MenuItem mnemonicParsing="false" onAction="#btnSaveFile" text="Save file" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
          </children>
       </AnchorPane>
    </children>
